--- a/axelor-web/src/main/webapp/css/slickgrid.css
+++ b/axelor-web/src/main/webapp/css/slickgrid.css
@@ -243,7 +243,7 @@
 
 .ui-dialog [ui-dialog] > .slickgrid {
 	position: absolute;
-	top: -1px; right: 0; bottom: 0; left: 0;
+	top: -1px; right: 0; bottom: -4px; left: 0;
 	border: 0;
 }
 
